# plugin-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build_lua_jit.ps1  hazedumper.sln  hazedumper.vcxproj  hazedumper.vcxproj.filters  plugin-sdk.sln  plugin-sdk.vcxproj  plugin-sdk.vcxproj.filters
.github/workflows/: README.md  build_lua_jit.yml  build_vs_project.yml  delete_artifacts.yml  development.yml  msvc_artifact_cleanup.yml  msvc_build_lua_jit.yml  msvc_build_vs_project.yml  release.yml
include/hazedumper/: fs.hpp
include/hazedumper/plugin-sdk/: dependencies.hpp  filesystem.hpp  generator.hpp  image.hpp  log.hpp  log_factory.hpp  module_loader.hpp  offset_cache.hpp  pattern.hpp  plugin.hpp  prerequisites.hpp  process.hpp
include/hazedumper/plugin-sdk/detail/: version.hpp
include/hazedumper/plugin-sdk/inl/: process.inl
include/hazedumper/plugin-sdk/lua/: call_state.hpp  class.hpp  gateway.hpp
plugins/hazedumper-msvc/: hazedumper-msvc.vcxproj  hazedumper-msvc.vcxproj.filters
plugins/hazedumper-msvc/include/: process.hpp
plugins/hazedumper-msvc/src/: main.cpp  process.cpp
src/: fs.cpp  main.cpp
src/impl/: cli.hpp  module_loader.hpp
src/impl/cli/: cli.cpp  cli.hpp
src/impl/log/: abstract_log.hpp  log_factory.cpp  log_factory.hpp  log_msvc.cpp  log_msvc.hpp  log_unix.cpp  log_unix.hpp
src/impl/module_loader/: abstract_module_loader.hpp  module_loader_factory.cpp  module_loader_factory.hpp  module_loader_msvc.cpp  module_loader_msvc.hpp  module_loader_unix.cpp  module_loader_unix.hpp
src/lua/: gateway.cpp
tests/: main.cpp
